--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -1,2 +1,11 @@
-<h1>Homepage</h1>
-<a>About The Odin Project</a>
+<body>
+    <h1>Homepage</h1>
+    <p>
+        <a href="https://www.theodinproject.com/about" target = "_blank" rel = "noopener noreferrer">About The Odin Project</a>
+    </p>
+    <p>
+        <a href = "./pages/about.html">About</a>
+    </p>
+    <img src="./images/dog.jpg">
+</body>
+
