added image to index.html
Added cat.jpg to /odin-links-and-images/images, added said image to about.html

--- a/odin-links-and-images/pages/about.html
+++ b/odin-links-and-images/pages/about.html
@@ -7,8 +7,10 @@
 
   <body>
     <h1>About Page</h1>
+    <h2>This is a Dog</h2>
+    <img src="../images/dog.jpg" alt = "a dog" height="310" width="310">
+    <h2>This is a Cat</h2>
+    <img src="../images/cat.jpeg" alt = "a cat" height="310" width="310">
   </body>
-
-  <img src="../images/dog.jpg" alt = "a dog" height="310" width="310">
 
 </html>
